# smartedu-yolo11

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt  run_detection.bat
backend/: README.md  app.py  config.py  requirements.txt
backend/api/: __init__.py  alert.py  auth.py  dashboard.py  detection.py  notification.py  portrait.py  settings.py  user.py
backend/business/: __init__.py
backend/controller/: AlertController.py  AuthController.py  DashboardController.py  DetectionController.py  NotificationController.py  PortraitController.py  SettingsController.py  UserController.py  __init__.py
backend/docs/: architecture_guidelines.md  architecture_violation_prevention.md  new_feature_development_guide.md
backend/foundation/: __init__.py
backend/ml/: __init__.py  mlflow_tracker.py
backend/model/: AlertModel.py  AnalyticsModel.py  ConfigModel.py  CourseModel.py  Detection_accessModel.py  Detection_repositoryModel.py  InterfaceModel.py  ManagerModel.py  (+5 more)
desktop/: detection_app.py
docx/: 核心代码.md  系统架构图.md  系统架构图_mermaid.md  系统架构图_分层.md  课程实训评分标准和注意事项.docx  软件学院课程实训项目报告格式要求2025.doc  项目报告.md  黑盒测试用例表格.md
frontend/: index.html  package-lock.json  package.json
scripts/: __init__.py  add_settings_column.py  create_student_users.py  create_test_users.py  evaluate_model.py  generate_alert_data.py  generate_demo_data.py  init_database.py  merge_datasets.py  migrate_alert_tables.py  migrate_notification_tables.py  migrate_teacher_class.py  register_model_mlflow.py  reset_demo_data.py  train.py  train_optimized_4050.py
src/: __init__.py
(+264 files in other folders)
